Enhancement: resolves #27 About Us page by fixing team members cards layout and adding individual photos

--- a/home/templates/home/about-us.html
+++ b/home/templates/home/about-us.html
@@ -31,150 +31,115 @@
         </div>
         <!-- start of team cards -->
         <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 justify-content-center g-2 mx-4 px-2">
-            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="..." class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h3 class="card-title team-member">Abhisek Joshi</h3>
-                            <p class="card-text">
-                                <a href="https://www.linkedin.com/in/abhisekjoshi/" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                                <a href="https://github.com/nofursad" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                            </p>
-                            <p class="card-text"><small class="text-muted">
-                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
-                                but as a means to return favours or to pay it forward.</small>
-                            </p>
-                        </div>
-                    </div>
+            <!-- testing image on top -->
+            <div class="card mx-3 mb-3 team-card">
+                <img src="{{ MEDIA_URL }}abhisek-joshi.jpg" class="card-img-top img-fluid" alt="Abhisek Joshi">
+                <div class="card-body">
+                    <h3 class="card-title team-member">Abhisek Joshi</h3>
+                    <p class="card-text">
+                        <a href="https://www.linkedin.com/in/abhisekjoshi/" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com/nofursad" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </p>
+                    <p class="card-text"><small class="text-muted">
+                        When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                        but as a means to return favours or to pay it forward.</small>
+                    </p>
                 </div>
             </div>
-            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="..." class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h3 class="card-title team-member">Baiju Abraham</h3>
-                            <p class="card-text">
-                                <a href="https://www.linkedin.com/in/baiju-abraham-a40633225/" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                                <a href="https://github.com/baijuka" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                            </p>
-                            <p class="card-text"><small class="text-muted">
-                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
-                                but as a means to return favours or to pay it forward.</small>
-                            </p>
-                        </div>
-                    </div>
+            <div class="card team-card mb-3 mx-3">
+                <img src="{{ MEDIA_URL }}baiju-abraham.jpg" class="card-img-top img-fluid" alt="Baiju Abraham">
+                <div class="card-body">
+                    <h3 class="card-title team-member">Baiju Abraham</h3>
+                    <p class="card-text">
+                        <a href="https://www.linkedin.com/in/baiju-abraham-a40633225/" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com/baijuka" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </p>
+                    <p class="card-text"><small class="text-muted">
+                        When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                        but as a means to return favours or to pay it forward.</small>
+                    </p>
                 </div>
             </div>
-            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="..." class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h3 class="card-title team-member">Chris Lawbuary</h3>
-                            <p class="card-text">
-                                <a href="https://www.linkedin.com/in/" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                                <a href="https://github.com/nofursad" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                            </p>
-                            <p class="card-text about-lead"><small class="text-muted">
-                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
-                                but as a means to return favours or to pay it forward.</small>
-                            </p>
-                        </div>
-                    </div>
+            <div class="card team-card mb-3 mx-3">
+                <img src="{{ MEDIA_URL }}img-placeholder.jpg" class="card-img-top img-fluid" alt="Chris Lawbuary">
+                <div class="card-body">
+                    <h3 class="card-title team-member">Chris Lawbuary</h3>
+                    <p class="card-text">
+                        <a href="https://www.linkedin.com/in/" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com/" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </p>
+                    <p class="card-text"><small class="text-muted">
+                        When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                        but as a means to return favours or to pay it forward.</small>
+                    </p>
                 </div>
             </div>
         </div>
         <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 justify-content-center g-2 mx-4 px-2">
-            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="..." class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h3 class="card-title team-member">Joy Zadan</h3>
-                            <p class="card-text">
-                                <a href="www.linkedin.com/in/joy-araneta-zadan" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                                <a href="https://github.com/JoyZadan" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                            </p>
-                            <p class="card-text"><small class="text-muted">
-                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
-                                but as a means to return favours or to pay it forward.</small>
-                            </p>
-                        </div>
-                    </div>
+            <div class="card team-card mt-3 mx-3">
+                <img src="{{ MEDIA_URL }}joy-zadan.jpg" class="card-img-top img-fluid" alt="Joy Zadan">
+                <div class="card-body">
+                    <h3 class="card-title team-member">Joy Zadan</h3>
+                    <p class="card-text">
+                        <a href="www.linkedin.com/in/joy-araneta-zadan" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com/JoyZadan" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </p>
+                    <p class="card-text"><small class="text-muted">
+                        When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                        but as a means to return favours or to pay it forward.</small>
+                    </p>
                 </div>
             </div>
-            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="..." class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h3 class="card-title team-member">Nick Lennon</h3>
-                            <p class="card-text">
-                                <a href="https://www.linkedin.com/in/n-lennon/" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                                <a href="https://github.com/nlenno1" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                            </p>
-                            <p class="card-text"><small class="text-muted">
-                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
-                                but as a means to return favours or to pay it forward.</small>
-                            </p>
-                        </div>
-                    </div>
+            <div class="card team-card mt-3 mx-3">
+                <img src="{{ MEDIA_URL }}nick-lennon.jpg" class="card-img-top img-fluid" alt="Nick Lennon">
+                <div class="card-body">
+                    <h3 class="card-title team-member">Nick Lennon</h3>
+                    <p class="card-text">
+                        <a href="https://www.linkedin.com/in/n-lennon/" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com/nlenno1" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </p>
+                    <p class="card-text"><small class="text-muted">
+                        When asking for help, there is comfort in knowing that many do not view helping others as a burden,
+                        but as a means to return favours or to pay it forward.</small>
+                    </p>
                 </div>
             </div>
-            <div class="card mb-3 mx-3 team-card" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="{% static 'img/samuel-dainton' %}" class="card-img" alt="Sam Dainton">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h3 class="card-title team-member">Sam Dainton</h3>
-                            <p class="card-text">
-                                <a href="https://www.linkedin.com/in/samuel-dainton/" class="about-icons"ctarget="_blank">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                                <a href="https://github.com/Samuel-Dainton" class="about-icons" target="_blank">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                            </p>
-                            <p class="card-text"><small class="text-muted">
-                                When asking for help, there is comfort in knowing that many do not view helping others as a burden,
-                                but as a means to return favours or to pay it forward.</small>
-                            </p>
-                        </div>
-                    </div>
+            <div class="card team-card mt-3 mx-3">
+                <img src="{{ MEDIA_URL }}sam-dainton.jpg" class="card-img-top img-fluid" alt="Sam Dainton">
+                <div class="card-body">
+                    <h3 class="card-title team-member">Sam Dainton</h3>
+                    <p class="card-text">
+                        <a href="https://www.linkedin.com/in/samuel-dainton/" class="about-icons"ctarget="_blank">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com/Samuel-Dainton" class="about-icons" target="_blank">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </p>
+                    <p class="card-text"><small class="text-muted">
+                        "This has been my first group project and I couldn't be happier with the team I've been given.
+                        I hope our work here will someday help make a difference."</small>
+                    </p>
                 </div>
             </div>
         </div>
