--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- NAVBAR STYLING -->
-<nav class="navbar navbar-light navbar-expand-md primary">
+<nav class="navbar navbar-expand-md primary">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}"></a>
         <button id="menu-toggle-button" class="navbar-toggler"
