--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,19 +4,20 @@
 {% block content %}
 
 <!-- Site introduction -->
-<section class="page-section clearfix">
-    <div class="jumbotron">
-        <div class="container">
-            <div class="here-to-help">
-                <h1 class="display-3">Here To Help</h1>
-                <p class="here-to-help-text gray-bg-trans">We all know support is likely out there for our struggles, but sometimes we need it most
+<section id="index-hero" class="img-fluid">
+    <div class="about-container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 index-hero-text-container">
+                <h1 class="display-4">Here To Help</h1>
+                <p>
+                    We all know support is likely out there for our struggles, but sometimes we need it most
                     from
                     the people that matter to us and are too worried about the outcomes to ask for it. Here at Reach Out
                     you can
                     use this platform to start those difficult conversations anonymously. Have a read of our users
                     testimonies to
-                    see how this service has helped better their lives and how you can do the same for yourself.</p>
-                <p><a class="btn btn-primary btn-lg" href="{% url 'how_to_use' %}" role="button">Learn more »</a></p>
+                    see how this service has helped better their lives and how you can do the same for yourself.
+                </p>
             </div>
         </div>
     </div>
@@ -24,8 +25,7 @@
 
 <!-- User testimonies -->
 
-<div class="container marketing">
-
+<div class="container marketing testimonies-container">
     <div class="row">
         <div class="col-lg-4">
             <img class="rounded-circle" src="{{ MEDIA_URL }}user1.png" alt="Generic placeholder image" width="140"
@@ -64,10 +64,10 @@
 
 <!-- Signup Divider -->
 
-<section class="page-section clearfix">
-    <div class="jumbotron green-bg">
+<section class="page-section clearfix signup-divider">
+    <div class="jumbotron green-bg-trans">
         <div class="container">
-            <div class="signup-divider white">
+            <div class="white">
                 <h1 class="display-3 text-shadow">Don't Hesitate</h1>
                 <p>The longer you take to open up, the longer you spend not living your best life. There's no reason
                     to take on these challenges alone. There are people out there willing to help you.
@@ -153,14 +153,13 @@
 
 <!-- Privacy Promise -->
 
-<section class="page-section cta">
+<section class="promise">
     <div class="container">
         <div class="row">
             <div class="col-xl-9 mx-auto">
-                <div class="cta-inner bg-faded text-center rounded">
-                    <h2 class="section-heading mb-4">
-                        <span class="section-heading-upper">Our Promise</span>
-                        <span class="section-heading-lower">To You</span>
+                <div class="bg-faded text-center">
+                    <h2 class="mb-4">
+                     Our Promise To You
                     </h2>
                     <p class="mb-0">We want you to know that all of your information here is kept private. It will be
                         up to you to reveal your identity, should you choose to, to the people you reach out to.
