--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <!-- Site introduction -->
+
 <section id="index-hero" class="img-fluid">
     <div class="about-container">
         <div class="row">
@@ -40,7 +41,7 @@
             </p>
 
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 right-push">
             <img class="rounded-circle" src="{{ MEDIA_URL }}user2.png" alt="Generic placeholder image" width="140"
                 height="140">
             <h2 class="red">Leeroy</h2>
@@ -82,7 +83,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="row featurette right-push">
         <div class="col-md-7">
             <h2 class="featurette-heading dark-blue">You shouldn't feel alone. <span class="text-muted">Remember.</span>
             </h2>
@@ -116,7 +117,7 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="row featurette right-push">
         <div class="col-md-7">
             <h2 class="featurette-heading dark-blue">Everyone is special. <span class="text-muted">Including you.</span>
             </h2>
