--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,8 +1,8 @@
 <div>
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-4 mb-0 text-muted">©2022 Reach Out</p>
+    <p class="col-xs mb-0 text-muted">©2022 Reach Out</p>
 
-    <div class="nav col-md-4 justify-content-end">
+    <div class="nav col-xs justify-content-end">
       <ul class="nav list-unstyled ms-auto">
         <li class="mx-2 mx-lg-3"><a class="link-secondary" href="https://twitter.com/" target="_blank"><i
               class="fab fa-twitter"></i></a></li>
