--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -4,6 +4,7 @@
 
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/allauth.css' %}">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
 {% endblock %}
 
 {% block content %}
