--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block inner_content %}
-<h1 class="mb-4">{% trans "Sign Up" %}</h1>
+<h1 class="mb-4 text-shadow-primary">{% trans "Sign Up" %}</h1>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
