--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,10 +1,10 @@
 {% load static %}
 
 <!-- NAVBAR STYLING -->
-<nav class="navbar navbar-expand-md primary">
+<nav class="navbar navbar-expand-md navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}"></a>
-        <button id="menu-toggle-button" class="navbar-toggler"
+        <button id="menu-toggle-button" class="navbar-toggler text-white"
             type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
