Fix: Fixes to layout and styling of index and how to use pages. Error: index and how to hero text still spilling right.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,7 @@
 <!-- Site introduction -->
 
 <section id="index-hero" class="img-fluid">
-    <div class="about-container">
+    <div class="home-container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 index-hero-text-container">
                 <h1 class="display-4">Here To Help</h1>
