Fix: Fixed hero gutters.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,7 @@
 <section id="index-hero" class="img-fluid">
     <div class="home-container">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 index-hero-text-container">
+            <div class="index-hero-text-container">
                 <h1 class="display-4">Here To Help</h1>
                 <p>
                     We all know support is likely out there for our struggles, but sometimes we need it most
