--- a/home/templates/home/how-to-use.html
+++ b/home/templates/home/how-to-use.html
@@ -6,7 +6,7 @@
 <section id="how-to-hero" class="img-fluid">
     <div class="about-container">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 index-hero-text-container">
+            <div class="index-hero-text-container">
                 <h1 class="display-4">How to Use Reach Out</h1>
                 <p>
                     Below you'll find a guide that will lead you step by step on how to go about
